--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+spring.application.name=angulorConnector
 server.port=8084
 
 spring.h2.console.enabled=true
@@ -15,3 +15,15 @@ spring.datasource.driver-class-name=org.h2.Driver
 #		org.h2.Driver
 #		jdbc:h2:mem:testdb
 #		ANG_DB/ANG_DB
+
+
+########MySQL Connection #############################################
+#spring.jpa.hibernate.ddl-auto=update   //(db create or already creaded)
+#spring.datasource.url=jdbc:mysql://localhost:3306/gmsschool?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##jpa vendor adapter configuration
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+#spring.jpa.generate-ddl=true
+#spring.jpa.show-sql=true
